Import translation work from https://crowdin.com/project/ublock

--- a/platform/mv3/extension/_locales/vi/messages.json
+++ b/platform/mv3/extension/_locales/vi/messages.json
@@ -344,7 +344,7 @@
     "description": "Text for buttons used to import and append content"
   },
   "exportButton": {
-    "message": "Xuất...",
+    "message": "Xuất…",
     "description": "Text for buttons used to export content"
   },
   "dnrRulesWarning": {
