--- a/src/_locales/th/messages.json
+++ b/src/_locales/th/messages.json
@@ -1196,7 +1196,7 @@
     "description": "Text warning about an incoming redirect"
   },
   "docblockedReasonLabel": {
-    "message": "Reason:",
+    "message": "สาเหตุ",
     "description": "The label which prepend the actual reason why a page was blocked"
   },
   "docblockedReasonMalicious": {
