--- a/src/_locales/ko/messages.json
+++ b/src/_locales/ko/messages.json
@@ -1284,7 +1284,7 @@
     "description": "Label for buttons used to select all text in editor"
   },
   "toggleCosmeticFiltering": {
-    "message": "표면 필터 토글",
+    "message": "시각 요소 필터 토글",
     "description": "Label for keyboard shortcut used to toggle cosmetic filtering"
   },
   "toggleJavascript": {
