Import translation work from https://crowdin.com/project/ublock

--- a/src/_locales/ar/messages.json
+++ b/src/_locales/ar/messages.json
@@ -508,7 +508,7 @@
     "description": "Filter lists section name"
   },
   "3pImport": {
-    "message": "إسترجاع…",
+    "message": "استرجاع…",
     "description": "The label for the checkbox used to import external filter lists"
   },
   "3pExternalListsHint": {
