--- a/platform/mv3/extension/_locales/zh_TW/messages.json
+++ b/platform/mv3/extension/_locales/zh_TW/messages.json
@@ -196,7 +196,7 @@
     "description": "The header text for the default filtering mode section"
   },
   "defaultFilteringModeDescription": {
-    "message": "預設過濾模式將被每個網站的過濾模式覆寫。你可以根據每個網站的情況，調整該網站的過濾模式，以選擇最適合的模式。每種模式都有其優缺點。",
+    "message": "預設過濾模式將被每個網站的過濾模式覆寫。你可以根據情況，調整該網站的過濾模式，以選擇最適合的模式。每種模式都有其優缺點。",
     "description": "This describes the default filtering mode setting"
   },
   "filteringMode0Name": {
@@ -216,15 +216,15 @@
     "description": "Name of blocking mode 3"
   },
   "basicFilteringModeDescription": {
-    "message": "來自選定過濾條件清單的基礎網路過濾。\n\n不需要讀取與變更網站資料的權限。",
+    "message": "來自選定過濾條件清單的基礎網路過濾功能。\n\n不需要讀取與變更網站資料的權限。",
     "description": "This describes the 'basic' filtering mode"
   },
   "optimalFilteringModeDescription": {
-    "message": "進階的網路過濾功能，並結合選定過濾清單中的特定延伸過濾。  \n\n需要授予讀取和修改所有網站資料的廣泛權限。",
+    "message": "進階的網路過濾功能，結合選定過濾清單中的特定延伸過濾功能。 \n\n需要授予讀取和修改所有網站資料的廣泛權限。",
     "description": "This describes the 'optimal' filtering mode"
   },
   "completeFilteringModeDescription": {
-    "message": "進階網路過濾，加上從選定過濾清單中進行特定與通用延伸過濾。\n\n需要授予讀取和修改所有網站資料的廣泛權限。\n\n通用延伸過濾可能會導致較高的網頁資源使用量。",
+    "message": "進階網路過濾功能，加上選定過濾清單中的特定與通用延伸過濾功能。\n\n需要授予讀取和修改所有網站資料的廣泛權限。\n\n通用延伸過濾功能可能會導致較高的網頁資源使用量。",
     "description": "This describes the 'complete' filtering mode"
   },
   "noFilteringModeDescription": {
@@ -268,7 +268,7 @@
     "description": "The header text for the back up/restore section"
   },
   "settingsBackupRestoreSummary": {
-    "message": "將你的自訂設定備份到檔案，或是從檔案還原你的自訂設定。",
+    "message": "將你的自訂設定備份到檔案，或從檔案還原你的自訂設定。",
     "description": "A summary description of the back up/restore section."
   },
   "settingsBackupRestoreLegend": {
@@ -344,7 +344,7 @@
     "description": "An option in a dropdown list"
   },
   "developOptionDnrRulesOf": {
-    "message": "DNR 規則……",
+    "message": "DNR 規則…",
     "description": "A section header in a dropdown list"
   },
   "developOptionDynamicRuleset": {
@@ -392,7 +392,7 @@
     "description": "Short sentence to report the number of currently registered DNR rules"
   },
   "pickerSliderLabel": {
-    "message": "移動滑桿以選取最佳符合",
+    "message": "移動滑桿以選取最合適的規則",
     "description": "Label to describe the purpose of the slider"
   },
   "pickerPick": {
@@ -408,7 +408,7 @@
     "description": "Text for the button to create the filter"
   },
   "unpickerUsage": {
-    "message": "選取下方的過濾器，突顯網頁中符合條件的元素。按一下回收桶可移除過濾器",
+    "message": "選取下方的過濾器，以突顯網頁中符合條件的元素。按一下回收桶可移除過濾器。",
     "description": "Summary description on how to use the tool to remove custom filters"
   }
 }
