--- a/src/_locales/zh_TW/messages.json
+++ b/src/_locales/zh_TW/messages.json
@@ -128,7 +128,7 @@
     "description": "Tooltip used for the logger icon in the panel"
   },
   "popupTipReport": {
-    "message": "回報此網站的問題",
+    "message": "回報網站問題",
     "description": "Tooltip used for the 'chat' icon in the panel"
   },
   "popupTipNoPopups": {
@@ -136,11 +136,11 @@
     "description": "Tooltip for the no-popups per-site switch"
   },
   "popupTipNoPopups1": {
-    "message": "點擊以封鎖這個網站的所有彈出式視窗",
+    "message": "點擊以封鎖網站的所有彈出式視窗",
     "description": "Tooltip for the no-popups per-site switch"
   },
   "popupTipNoPopups2": {
-    "message": "點擊以解除封鎖這個網站的所有彈出式視窗",
+    "message": "點擊以解除封鎖網站的所有彈出式視窗",
     "description": "Tooltip for the no-popups per-site switch"
   },
   "popupTipNoLargeMedia": {
@@ -164,7 +164,7 @@
     "description": "Tooltip for the no-cosmetic-filtering per-site switch"
   },
   "popupTipNoCosmeticFiltering2": {
-    "message": "點擊以啟用這個網站的網頁元素過濾",
+    "message": "點擊以啟用網站的網頁元素過濾功能",
     "description": "Tooltip for the no-cosmetic-filtering per-site switch"
   },
   "popupTipNoRemoteFonts": {
@@ -176,15 +176,15 @@
     "description": "Tooltip for the no-remote-fonts per-site switch"
   },
   "popupTipNoRemoteFonts2": {
-    "message": "點擊以解除封鎖這個網站的遠端字型",
+    "message": "點擊以解除封鎖網站的遠端字型",
     "description": "Tooltip for the no-remote-fonts per-site switch"
   },
   "popupTipNoScripting1": {
-    "message": "點擊以停用這個網站的 JavaScript",
+    "message": "點擊以停用網站的 JavaScript",
     "description": "Tooltip for the no-scripting per-site switch"
   },
   "popupTipNoScripting2": {
-    "message": "點擊以重新啟用此網站的 JavaScript",
+    "message": "點擊以重新啟用網站的 JavaScript",
     "description": "Tooltip for the no-scripting per-site switch"
   },
   "popupNoPopups_v2": {
@@ -220,11 +220,11 @@
     "description": "Tooltip when hovering the top-most cell of the global-rules column."
   },
   "popupTipLocalRules": {
-    "message": "區域規則：此欄位的規則僅會套用至目前網站。\n區域規則會覆蓋過全域規則。",
+    "message": "區域規則：此欄位的規則僅套用至當前網站。\n區域規則會覆蓋全域規則。",
     "description": "Tooltip when hovering the top-most cell of the local-rules column."
   },
   "popupTipSaveRules": {
-    "message": "點擊以永久儲存您的變更。",
+    "message": "點擊以永久儲存變更。",
     "description": "Tooltip when hovering over the padlock in the dynamic filtering pane."
   },
   "popupTipRevertRules": {
@@ -356,7 +356,7 @@
     "description": "Checkbox to let user access advanced, technical features"
   },
   "settingsPrefetchingDisabledPrompt": {
-    "message": "停用預先擷取功能（以避免對被封鎖的網路請求產生任何連線）",
+    "message": "停用預先取回連結（避免連接至已阻擋的網路請求）",
     "description": "English: "
   },
   "settingsHyperlinkAuditingDisabledPrompt": {
@@ -452,7 +452,7 @@
     "description": "This will cause uBO to ignore all generic cosmetic filters."
   },
   "3pIgnoreGenericCosmeticFiltersInfo": {
-    "message": "「通用元素過濾規則」是會套用在所有網站上的網頁元素過濾規則。啟用此選項會消除網頁處理此類規則時增加的額外記憶體與 CPU 使用量。\n\n建議在效能較弱的裝置上啟用此選項。",
+    "message": "「通用網頁元素過濾規則」是會套用在所有網站上的網頁元素過濾規則。啟用此選項會消除網頁處理此類規則時增加的額外記憶體與 CPU 使用量。\n\n建議在效能較弱的裝置上啟用此選項。",
     "description": "Describes the purpose of the 'Ignore generic cosmetic filters' feature."
   },
   "3pSuspendUntilListsAreLoaded": {
@@ -468,7 +468,7 @@
     "description": "English: Apply changes"
   },
   "3pGroupDefault": {
-    "message": "內建",
+    "message": "內置",
     "description": "Filter lists section name"
   },
   "3pGroupAds": {
@@ -492,7 +492,7 @@
     "description": "Filter lists section name"
   },
   "3pGroupAnnoyances": {
-    "message": "騷擾",
+    "message": "嫌惡元素",
     "description": "Filter lists section name"
   },
   "3pGroupMultipurpose": {
@@ -512,7 +512,7 @@
     "description": "The label for the checkbox used to import external filter lists"
   },
   "3pExternalListsHint": {
-    "message": "每行一個網址。以「!」開頭的行將被忽略。無效的網址也將被忽略。",
+    "message": "每行一個網址。無效網址將被忽略。",
     "description": "Short information about how to use the textarea to import external filter lists by URL"
   },
   "3pExternalListObsolete": {
@@ -524,7 +524,7 @@
     "description": "used as a tooltip for eye icon beside a list"
   },
   "3pLastUpdate": {
-    "message": "最後更新：{{ago}}。",
+    "message": "上次更新：{{ago}}。\n點擊此處以強制更新。",
     "description": "used as a tooltip for the clock icon beside a list"
   },
   "3pUpdating": {
@@ -536,11 +536,11 @@
     "description": "used as a tooltip for error icon beside a list"
   },
   "1pTrustWarning": {
-    "message": "切勿添加來自不可信來源的過濾規則。",
+    "message": "切勿加入來歷不明的過濾規則。",
     "description": "Warning against copy-pasting filters from random sources"
   },
   "1pEnableMyFiltersLabel": {
-    "message": "啟用我的自訂過濾規則",
+    "message": "啟用自訂過濾器",
     "description": "Label for the checkbox use to enable/disable 'My filters' list"
   },
   "1pTrustMyFiltersLabel": {
@@ -836,11 +836,11 @@
     "description": "Below this sentence, the filter list(s) in which the filter was found"
   },
   "loggerStaticFilteringFinderSentence2": {
-    "message": "無法在任何啟用的過濾清單中，找到靜態過濾規則 <code>{{filter}}</code>",
+    "message": "無法在任何目前已啟用的過濾規則清單中找到靜態過濾規則",
     "description": "Message to show when a filter cannot be found in any filter lists"
   },
   "loggerSettingDiscardPrompt": {
-    "message": "不符合以下任一狀況的記錄將會被自動清除：",
+    "message": "未符合以下所有條件的記錄將會被自動捨棄：",
     "description": "Logger setting: A sentence to describe the purpose of the settings below"
   },
   "loggerSettingPerEntryMaxAge": {
@@ -856,7 +856,7 @@
     "description": "A logger setting"
   },
   "loggerSettingPerEntryLineCount": {
-    "message": "在垂直延展的模式中每個項目顯示 {{input}} 行",
+    "message": "在垂直延展模式中每條記錄顯示 {{input}} 行",
     "description": "A logger setting"
   },
   "loggerSettingHideColumnsPrompt": {
@@ -900,7 +900,7 @@
     "description": "Text for button which open an external webpage in Support pane"
   },
   "supportReportSpecificButton": {
-    "message": "發出新報告",
+    "message": "建立新報告",
     "description": "Text for button which open an external webpage in Support pane"
   },
   "supportFindSpecificButton": {
@@ -912,7 +912,7 @@
     "description": "Header of 'Documentation' section in Support pane"
   },
   "supportS1P1": {
-    "message": "欲了解 uBlock Origin 所有的功能，請閱讀 <code>uBlock/wiki</code> 中的文件。",
+    "message": "欲了解 uBlock Origin 所有的功能，請詳閱 <code>uBlock/wiki</code> 中的文件。",
     "description": "First paragraph of 'Documentation' section in Support pane"
   },
   "supportS2H": {
@@ -924,7 +924,7 @@
     "description": "First paragraph of 'Questions and support' section in Support pane"
   },
   "supportS3H": {
-    "message": "過濾器問題 / 網站被搞壞",
+    "message": "過濾器問題 / 網站被破壞",
     "description": "Header of 'Filter issues' section in Support pane"
   },
   "supportS3P1": {
@@ -936,7 +936,7 @@
     "description": "Second paragraph of 'Filter issues' section in Support pane"
   },
   "supportS3P3": {
-    "message": "<b>小提示：</b>請確定您的過濾器清單已經更新至最新版本。我們主要用 <span data-url=\"logger-ui.html#_\">記錄器</span> 來分析過濾器相關問題。",
+    "message": "<b>小提示：</b>請確定您的過濾器清單已經更新至最新版本。我們主要用<span data-url=\"logger-ui.html#_\">「記錄器」</span>來分析過濾器相關問題。",
     "description": "Third paragraph of 'Filter issues' section in Support pane"
   },
   "supportS4H": {
@@ -964,11 +964,11 @@
     "description": "Header of 'Report a filter issue' section in Support pane"
   },
   "supportS6P1S1": {
-    "message": "為了避免太多人發出重複的報告拖垮志工，請先確認是否已經有人回報過您打算報告的問題。",
+    "message": "為避免增加志願者的負擔，請先確認此問題是否已被回報過。<b>請注意：</b>點選按鈕會將本頁的來源傳送到 GitHub。",
     "description": "A paragraph in the filter issue reporter section"
   },
   "supportS6P2S1": {
-    "message": "過濾器清單每天更新。請確認您的問題無法用最新的過濾器清單解決。",
+    "message": "過濾器清單每天更新，請確保問題尚未在最新版本中解決。",
     "description": "A paragraph in the filter issue reporter section"
   },
   "supportS6P2S2": {
@@ -992,11 +992,11 @@
     "description": "An entry in the widget used to select the type of issue"
   },
   "supportS6Select1Option2": {
-    "message": "會覆蓋內容或有其他煩人的內容",
+    "message": "含有覆蓋物或其他滋擾物",
     "description": "An entry in the widget used to select the type of issue"
   },
   "supportS6Select1Option3": {
-    "message": "會偵測到您已安裝 uBlock Origin",
+    "message": "偵測到 uBlock Origin",
     "description": "An entry in the widget used to select the type of issue"
   },
   "supportS6Select1Option4": {
@@ -1004,15 +1004,15 @@
     "description": "An entry in the widget used to select the type of issue"
   },
   "supportS6Select1Option5": {
-    "message": "開啟 uBlock Origin 的時候網頁運作不正常",
+    "message": "開啟 uBlock Origin 的時候運作不正常",
     "description": "An entry in the widget used to select the type of issue"
   },
   "supportS6Select1Option6": {
-    "message": "會開啟不想要的分頁或視窗",
+    "message": "會開啟不必要的分頁或視窗",
     "description": "An entry in the widget used to select the type of issue"
   },
   "supportS6Select1Option7": {
-    "message": "導致惡意軟體、網路釣魚",
+    "message": "導向惡意軟體、釣魚網站",
     "description": "An entry in the widget used to select the type of issue"
   },
   "supportS6Checkbox1": {
@@ -1032,11 +1032,11 @@
     "description": "Link to privacy policy on GitHub (English)"
   },
   "aboutChangelog": {
-    "message": "更新日誌",
+    "message": "變更日誌",
     "description": ""
   },
   "aboutCode": {
-    "message": "源碼（GPLv3）",
+    "message": "原始碼（GPLv3）",
     "description": "English: Source code (GPLv3)"
   },
   "aboutContributors": {
@@ -1044,7 +1044,7 @@
     "description": "English: Contributors"
   },
   "aboutSourceCode": {
-    "message": "源碼",
+    "message": "原始碼",
     "description": "Link text to source code repo"
   },
   "aboutTranslations": {
@@ -1056,15 +1056,15 @@
     "description": "Link text to uBO's own filter lists repo"
   },
   "aboutDependencies": {
-    "message": "外部相依套件（與通用公眾授權條款第三版相容）：",
+    "message": "外部相依套件（與 GPLv3 相容）：",
     "description": "Shown in the About pane"
   },
   "aboutCDNs": {
-    "message": "uBO 自家的過濾規則清單代管於下列 <a href=\"https://wikipedia.org/wiki/Content_delivery_network\">CDN</a> 中：",
+    "message": "uBO 自家的過濾規則清單由下列 <a href=\"https://wikipedia.org/wiki/Content_delivery_network\">CDN</a> 免費代管：",
     "description": "Shown in the About pane"
   },
   "aboutCDNsInfo": {
-    "message": "當過濾清單需要更新時，將隨機選擇一組 CDN 連線下載",
+    "message": "當過濾清單需要更新時，將隨機選擇一組 CDN 連線下載。",
     "description": "Shown in the About pane"
   },
   "aboutBackupDataButton": {
@@ -1096,7 +1096,7 @@
     "description": "Message asking user to confirm reset"
   },
   "errorCantConnectTo": {
-    "message": "無法連線至 {{url}}",
+    "message": "網路錯誤：{{msg}}",
     "description": "English: Network error: {{msg}}"
   },
   "subscriberConfirm": {
@@ -1144,7 +1144,7 @@
     "description": "Firefox-specific: appears as 'uBlock₀ (off)'"
   },
   "docblockedTitle": {
-    "message": "頁面已阻擋",
+    "message": "已封鎖頁面",
     "description": "Used as a title for the document-blocked page"
   },
   "docblockedPrompt1": {
@@ -1188,11 +1188,11 @@
     "description": "English: Permanently"
   },
   "docblockedDisable": {
-    "message": "繼續載入",
+    "message": "繼續",
     "description": "Button text to navigate to the blocked page"
   },
   "docblockedRedirectPrompt": {
-    "message": "被封鎖的網頁想要重新導向至其他網站。如果您選擇繼續，則會直接前往：{{url}}",
+    "message": "被阻擋的頁面想要重定向到另一個網站。如果您選擇繼續，將直接導航至：{{url}}",
     "description": "Text warning about an incoming redirect"
   },
   "docblockedReasonLabel": {
@@ -1200,7 +1200,7 @@
     "description": "The label which prepend the actual reason why a page was blocked"
   },
   "docblockedReasonMalicious": {
-    "message": "惡意程式碼",
+    "message": "惡意軟體",
     "description": "An actual reason why a page was blocked"
   },
   "docblockedReasonTracker": {
@@ -1228,7 +1228,7 @@
     "description": ""
   },
   "cloudDeviceNamePrompt": {
-    "message": "此裝置的名稱：",
+    "message": "該裝置的名稱：",
     "description": "used as a prompt for the user to provide a custom device name"
   },
   "advancedSettingsWarning": {
@@ -1252,11 +1252,11 @@
     "description": ""
   },
   "contextMenuBlockElementInFrame": {
-    "message": "阻擋框架中的內容…",
+    "message": "阻擋框架元素中的內容…",
     "description": "An entry in the browser's contextual menu"
   },
   "contextMenuSubscribeToList": {
-    "message": "訂閱過濾器清單⋯",
+    "message": "訂閱過濾規則清單…",
     "description": "An entry in the browser's contextual menu"
   },
   "contextMenuTemporarilyAllowLargeMediaElements": {
@@ -1292,7 +1292,7 @@
     "description": "Label for keyboard shortcut used to toggle no-scripting switch"
   },
   "relaxBlockingMode": {
-    "message": "放寬封鎖量模式",
+    "message": "放寬封鎖模式",
     "description": "Label for keyboard shortcut used to relax blocking mode"
   },
   "storageUsed": {
@@ -1320,7 +1320,7 @@
     "description": "Summary of number of errors as reported by the linter "
   },
   "unprocessedRequestTooltip": {
-    "message": "無法在瀏覽器啟動的時候正確過濾。\n請重新載入頁面來確保過濾正確。",
+    "message": "無法在瀏覽器啟動的時候正確過濾頁面。請重新載入來確保過濾正確。",
     "description": "A warning which will appear in the popup panel if needed"
   },
   "dummy": {
