--- a/platform/mv3/extension/_locales/vi/messages.json
+++ b/platform/mv3/extension/_locales/vi/messages.json
@@ -383,6 +383,14 @@
     "message": "Khôi phục…",
     "description": "Text for buttons used to restore content"
   },
+  "resetToDefaultButton": {
+    "message": "Reset to default settings…",
+    "description": "Text for buttons used to reset configurations to default"
+  },
+  "resetToDefaultConfirm": {
+    "message": "All your custom settings will be removed. Do you really want to reset to default settings?",
+    "description": "Message asking user to confirm reset to default settings"
+  },
   "dnrRulesWarning": {
     "message": "Không thêm các bộ lọc từ các nguồn không đáng tin cậy",
     "description": "Short description of the DNR rules editor pane"
