--- a/platform/mv3/extension/_locales/ru/messages.json
+++ b/platform/mv3/extension/_locales/ru/messages.json
@@ -384,11 +384,11 @@
     "description": "Text for buttons used to restore content"
   },
   "resetToDefaultButton": {
-    "message": "Reset to default settings…",
+    "message": "Сброс до настроек по умолчанию…",
     "description": "Text for buttons used to reset configurations to default"
   },
   "resetToDefaultConfirm": {
-    "message": "All your custom settings will be removed. Do you really want to reset to default settings?",
+    "message": "Все ваши пользовательские настройки будут удалены. Уверены, что хотите восстановить настройки по умолчанию?",
     "description": "Message asking user to confirm reset to default settings"
   },
   "dnrRulesWarning": {
