--- a/platform/mv3/extension/_locales/el/messages.json
+++ b/platform/mv3/extension/_locales/el/messages.json
@@ -384,11 +384,11 @@
     "description": "Text for buttons used to restore content"
   },
   "resetToDefaultButton": {
-    "message": "Reset to default settings…",
+    "message": "Επαναφορά στις προεπιλεγμένες ρυθμίσεις…",
     "description": "Text for buttons used to reset configurations to default"
   },
   "resetToDefaultConfirm": {
-    "message": "All your custom settings will be removed. Do you really want to reset to default settings?",
+    "message": "Όλες οι προσαρμοσμένες ρυθμίσεις σας θα διαγραφούν. Σίγουρα θέλετε να επαναφέρετε τις προεπιλεγμένες ρυθμίσεις;",
     "description": "Message asking user to confirm reset to default settings"
   },
   "dnrRulesWarning": {
