--- a/platform/mv3/extension/_locales/nl/messages.json
+++ b/platform/mv3/extension/_locales/nl/messages.json
@@ -384,11 +384,11 @@
     "description": "Text for buttons used to restore content"
   },
   "resetToDefaultButton": {
-    "message": "Reset to default settings…",
+    "message": "Standaardinstellingen terugzetten…",
     "description": "Text for buttons used to reset configurations to default"
   },
   "resetToDefaultConfirm": {
-    "message": "All your custom settings will be removed. Do you really want to reset to default settings?",
+    "message": "Al uw aangepaste instellingen zullen worden verwijderd. Wilt u de standaardinstellingen echt terugzetten?",
     "description": "Message asking user to confirm reset to default settings"
   },
   "dnrRulesWarning": {
