--- a/platform/mv3/extension/_locales/pl/messages.json
+++ b/platform/mv3/extension/_locales/pl/messages.json
@@ -384,11 +384,11 @@
     "description": "Text for buttons used to restore content"
   },
   "resetToDefaultButton": {
-    "message": "Reset to default settings…",
+    "message": "Przywróć ustawienia domyślne…",
     "description": "Text for buttons used to reset configurations to default"
   },
   "resetToDefaultConfirm": {
-    "message": "All your custom settings will be removed. Do you really want to reset to default settings?",
+    "message": "Wszystkie ustawienia niestandardowe zostaną usunięte. Czy na pewno chcesz przywrócić ustawienia domyślne?",
     "description": "Message asking user to confirm reset to default settings"
   },
   "dnrRulesWarning": {
