--- a/platform/mv3/extension/_locales/sk/messages.json
+++ b/platform/mv3/extension/_locales/sk/messages.json
@@ -384,11 +384,11 @@
     "description": "Text for buttons used to restore content"
   },
   "resetToDefaultButton": {
-    "message": "Reset to default settings…",
+    "message": "Obnoviť predvolené nastavenia…",
     "description": "Text for buttons used to reset configurations to default"
   },
   "resetToDefaultConfirm": {
-    "message": "All your custom settings will be removed. Do you really want to reset to default settings?",
+    "message": "Všetky vlastné nastavenia sa odstránia. Naozaj chcete obnoviť predvolené nastavenia?",
     "description": "Message asking user to confirm reset to default settings"
   },
   "dnrRulesWarning": {
