--- a/src/_locales/zh_TW/messages.json
+++ b/src/_locales/zh_TW/messages.json
@@ -356,7 +356,7 @@
     "description": "Checkbox to let user access advanced, technical features"
   },
   "settingsPrefetchingDisabledPrompt": {
-    "message": "停用預先取回連結（避免連接至已阻擋的網路請求）",
+    "message": "停用預先擷取功能（以避免對被封鎖的網路請求產生任何連線）",
     "description": "English: "
   },
   "settingsHyperlinkAuditingDisabledPrompt": {
@@ -364,7 +364,7 @@
     "description": "English: "
   },
   "settingsWebRTCIPAddressHiddenPrompt": {
-    "message": "防止 WebRTC 洩漏本地 IP 位址",
+    "message": "防止 WebRTC 洩漏本機 IP 位址",
     "description": "English: "
   },
   "settingPerSiteSwitchGroup": {
@@ -404,7 +404,7 @@
     "description": "Section for controlling advanced-user settings"
   },
   "settingsAdvancedSynopsis": {
-    "message": "僅合適技術使用者的功能",
+    "message": "僅適合技術使用者的功能",
     "description": "Description of section controlling advanced-user settings"
   },
   "settingsAdvancedUserSettings": {
@@ -480,7 +480,7 @@
     "description": "Filter lists section name"
   },
   "3pGroupMalware": {
-    "message": "惡意軟體保護及保安",
+    "message": "惡意軟體防護與安全性",
     "description": "Filter lists section name"
   },
   "3pGroupSocial": {
@@ -524,7 +524,7 @@
     "description": "used as a tooltip for eye icon beside a list"
   },
   "3pLastUpdate": {
-    "message": "上次更新：{{ago}}。\n點擊此處以強制更新。",
+    "message": "上次更新時間：{{ago}}。\n按這裡以強制更新。",
     "description": "used as a tooltip for the clock icon beside a list"
   },
   "3pUpdating": {
@@ -848,7 +848,7 @@
     "description": "A logger setting"
   },
   "loggerSettingPerTabMaxLoads": {
-    "message": "每個分頁最多保留 {{input}} 次內容加載產生的記錄",
+    "message": "每個分頁最多保留 {{input}} 次內容載入產生的記錄",
     "description": "A logger setting"
   },
   "loggerSettingPerTabMaxEntries": {
