--- a/platform/mv3/extension/_locales/bg/messages.json
+++ b/platform/mv3/extension/_locales/bg/messages.json
@@ -384,11 +384,11 @@
     "description": "Text for buttons used to restore content"
   },
   "resetToDefaultButton": {
-    "message": "Reset to default settings…",
+    "message": "Възстановяване на първоначалните настройки…",
     "description": "Text for buttons used to reset configurations to default"
   },
   "resetToDefaultConfirm": {
-    "message": "All your custom settings will be removed. Do you really want to reset to default settings?",
+    "message": "Всички ваши персонализирани настройки ще бъдат премахнати. Наистина ли искате да възстановите фабричните настройки?",
     "description": "Message asking user to confirm reset to default settings"
   },
   "dnrRulesWarning": {
