--- a/platform/mv3/extension/_locales/hu/messages.json
+++ b/platform/mv3/extension/_locales/hu/messages.json
@@ -384,11 +384,11 @@
     "description": "Text for buttons used to restore content"
   },
   "resetToDefaultButton": {
-    "message": "Reset to default settings…",
+    "message": "Alapértelmezett beállításokra visszaállítás…",
     "description": "Text for buttons used to reset configurations to default"
   },
   "resetToDefaultConfirm": {
-    "message": "All your custom settings will be removed. Do you really want to reset to default settings?",
+    "message": "Az összes egyéni beállításod törlődik. Tényleg az alapbeállításokra akarsz viszzaállítani?",
     "description": "Message asking user to confirm reset to default settings"
   },
   "dnrRulesWarning": {
