--- a/platform/mv3/extension/_locales/lv/messages.json
+++ b/platform/mv3/extension/_locales/lv/messages.json
@@ -384,11 +384,11 @@
     "description": "Text for buttons used to restore content"
   },
   "resetToDefaultButton": {
-    "message": "Reset to default settings…",
+    "message": "Atiestatīt uz noklusējuma iestatījumiem…",
     "description": "Text for buttons used to reset configurations to default"
   },
   "resetToDefaultConfirm": {
-    "message": "All your custom settings will be removed. Do you really want to reset to default settings?",
+    "message": "Visi pielāgotie iestatījumi tiks noņemti. Vai tiešām atiestatīt uz noklusējuma iestatījumiem?",
     "description": "Message asking user to confirm reset to default settings"
   },
   "dnrRulesWarning": {
