--- a/src/_locales/zh_TW/messages.json
+++ b/src/_locales/zh_TW/messages.json
@@ -356,7 +356,7 @@
     "description": "Checkbox to let user access advanced, technical features"
   },
   "settingsPrefetchingDisabledPrompt": {
-    "message": "停用預先擷取功能（以避免對被封鎖的網路請求產生任何連線）",
+    "message": "停用「預先取回連結」（避免連接至已阻擋的網路請求）",
     "description": "English: "
   },
   "settingsHyperlinkAuditingDisabledPrompt": {
